--- a/style.css
+++ b/style.css
@@ -4,4 +4,19 @@ h1
     color: red;
     font-size: 50px;
     font-style: italic;
+    background-position: 25px;
+    text-align: center;
+}
+h2
+{
+    color: aqua;
+    font-size: 25px;
+    font-style: oblique;
+}
+body
+{
+    background-image: url('https://raw.githubusercontent.com/Puppalakoushik/Puppalakoushik.github.io/Master/5ed52e2f7732d.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
