--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
 h1
 {
     position: relative;
-    color: red;
-    font-size: 50px;
+    color: black;
+    font-size: 60px;
     font-style: italic;
-    background-position: 25px;
     text-align: center;
 }
 h2
 {
     color: aqua;
-    font-size: 25px;
+    font-size: 40px;
     font-style: oblique;
+    text-align: center;
 }
 body
 {
@@ -19,4 +19,10 @@ body
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
+}
+p{
+    font-size: 25px;
+    color: blueviolet;
+    font-style: inherit;
+    text-align: center;
 }
