--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ h2 {
     text-align: center;
 }
 body {
-    background-image: url('Images/Nature.jpg');
+    background-image: url('Images/Nature.png');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
