--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ h1 {
     font-size: 60px;
     font-style: italic;
     text-align: center;
+    text-decoration: underline;
 }
 h2 {
     color: darkblue;
