--- a/style.css
+++ b/style.css
@@ -6,21 +6,24 @@ h1 {
     text-align: center;
     text-decoration: underline;
 }
+
 h2 {
     color: darkblue;
     font-size: 40px;
     font-style: oblique;
     text-align: center;
 }
+
 body {
     background-image: url('Images/ice.png');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
 }
+
 p {
     font-size: 25px;
-    color: red;
+    color: #ffbb00;
     font-style: inherit;
     text-align: center;
 }
