--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -273,7 +273,7 @@
 --------------------------------------------------------------*/
     
     #hero {
-        background: url("../../Images/Gg2LbDh.gif") repeat scroll center center/cover;
+        background: url("../../Images/Gg2LbDh.webm") repeat scroll center center/cover;
         background-size: cover;
         background-repeat: no-repeat;
         background-attachment: scroll;
