--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -732,12 +732,12 @@ section {
     background: black;
 }
 
-.contact .php-email-form {
+.contact .email-form {
     box-shadow: 0 0 30px rgba(214, 215, 216, 0.6);
     padding: 27px;
 }
 
-.contact .php-email-form .validate {
+.contact .email-form .validate {
     display: none;
     color: red;
     margin: 0 0 15px 0;
@@ -745,7 +745,7 @@ section {
     font-size: 13px;
 }
 
-.contact .php-email-form .error-message {
+.contact .email-form .error-message {
     display: none;
     color: #fff;
     background: #ed3c0d;
@@ -754,11 +754,11 @@ section {
     font-weight: 600;
 }
 
-.contact .php-email-form .error-message br+br {
+.contact .email-form .error-message br+br {
     margin-top: 25px;
 }
 
-.contact .php-email-form .sent-message {
+.contact .email-form .sent-message {
     display: none;
     color: #fff;
     background: #18d26e;
@@ -767,14 +767,14 @@ section {
     font-weight: 600;
 }
 
-.contact .php-email-form .loading {
+.contact .email-form .loading {
     display: none;
     background: #fff;
     text-align: center;
     padding: 15px;
 }
 
-.contact .php-email-form .loading:before {
+.contact .email-form .loading:before {
     content: "";
     display: inline-block;
     border-radius: 50%;
@@ -787,27 +787,27 @@ section {
     animation: animate-loading 1s linear infinite;
 }
 
-.contact .php-email-form input,
-.contact .php-email-form textarea {
+.contact .email-form input,
+.contact .email-form textarea {
     border-radius: 0;
     box-shadow: none;
     font-size: 14px;
 }
 
-.contact .php-email-form input::focus,
-.contact .php-email-form textarea::focus {
+.contact .email-form input::focus,
+.contact .email-form textarea::focus {
     background-color: skyblue;
 }
 
-.contact .php-email-form input {
+.contact .email-form input {
     padding: 10px 15px;
 }
 
-.contact .php-email-form textarea {
+.contact .email-form textarea {
     padding: 12px 15px;
 }
 
-.contact .php-email-form button[type="submit"] {
+.contact .email-form button[type="submit"] {
     background: skyblue;
     border: 0;
     padding: 10px 24px;
@@ -816,7 +816,7 @@ section {
     border-radius: 5px;
 }
 
-.contact .php-email-form button[type="submit"]:hover {
+.contact .email-form button[type="submit"]:hover {
     background: skyblue;
 }
 
