--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -498,7 +498,7 @@ section {
 
 @media (max-width: 992px) {
   .breadcrumbs h2 {
-    margin: 0 0 10px 0;
+    margin: 0 0 10px;
   }
 }
 
@@ -586,7 +586,7 @@ section {
 }
 
 .about .content .count-box p {
-  padding: 15px 0 0 0;
+  padding: 15px 0 0;
   margin: 0 0 0 50px;
   font-family: "Raleway", sans-serif;
   font-size: 14px;
@@ -625,7 +625,7 @@ section {
 
 .about .skills-content .progress .skill {
   padding: 10px 0;
-  margin: 0 0 6px 0;
+  margin: 0 0 6px;
   text-transform: uppercase;
   display: block;
   font-weight: 700;
@@ -657,7 +657,7 @@ section {
   color: #444444;
   text-align: center;
   box-shadow: 0 0 30px rgba(214, 215, 216, 0.6);
-  padding: 20px 0 30px 0;
+  padding: 20px 0 30px;
 }
 
 .contact .info-box i.bx {
@@ -714,7 +714,7 @@ section {
 .contact .email-form .validate {
   display: none;
   color: red;
-  margin: 0 0 15px 0;
+  margin: 0 0 15px;
   font-weight: 400;
   font-size: 13px;
 }
@@ -847,18 +847,18 @@ section {
   position: relative;
   font-family: "Satisfy", serif;
   padding: 0;
-  margin: 0 0 15px 0;
+  margin: 0 0 15px;
 }
 
 #footer p {
   font-size: 15;
   font-style: italic;
   padding: 0;
-  margin: 0 0 40px 0;
+  margin: 0 0 40px;
 }
 
 #footer .social-links {
-  margin: 0 0 40px 0;
+  margin: 0 0 40px;
 }
 
 #footer .social-links a {
@@ -882,7 +882,7 @@ section {
 }
 
 #footer .copyright {
-  margin: 0 0 5px 0;
+  margin: 0 0 5px;
 }
 
 #footer .credits {
